# GPU-ImageRecognition

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  ImageRecognition  ImageRecognition_test[1]_include.cmake  Makefile  README.md  cmake_install.cmake  compile_commands.json
.cmake/api/v1/reply/: cache-v2-e160f4b11d96f95f6b26.json  cmakeFiles-v1-ed86fcb62e7373b82cda.json  codemodel-v2-9fd65016917f72e138a7.json  directory-_deps.googletest-build.googlemock-Debug-2834a7ad8623c65512e1.json  directory-_deps.googletest-build.googletest-Debug-f14775eb35e7764edf90.json  index-2024-07-19T05-51-56-0349.json  target-ImageRecognition-Debug-346cf2485fb6fedd7720.json  target-ImageRecognition_test-Debug-243ea1519633a719e510.json  target-clean-all-Debug-eec05418afcaedf863f9.json  target-create_output_dir-Debug-b9ee3810fbe232ff5008.json  target-gmock-Debug-3c2958ad93be7a01919d.json  target-gmock_main-Debug-61427211533a78f2ff1e.json  target-gtest-Debug-10d24b2b0c3f0ce52c87.json  target-gtest_main-Debug-aadb43c06cb597e7b6ab.json  target-r-Debug-1fc30cc8cf2adf23ec18.json
Testing/: TAG
Testing/20240719-0551/: Test.xml
include/: cuda_image.cuh  cuda_kernels.cuh  disjointset.h  haarCasscades.h  image.h  masks.h  opencl_image.h  pch.h  viola_jones.h
include/kernels/: grayscale.cl  integral_sum.cl  intergral_sum.cl  lbp.cl  viola_jones.cl
src/: cuda_image.cu  cuda_kernels.cu  image.cpp  main.cpp  opencl_image.cpp  test.cc  viola_jones.cpp
